# mork-fetch-testbot

./: .assistant_model  .coverage  .coverage.73ec83233513.16972.XdPUFnSx  .coverage.73ec83233513.17060.XyrIhYnx  .coveragerc  .env.example  .env.local  .env_config  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.bak  .replit  .ruff.toml  .ruffignore  409_RESOLUTION_SUCCESS.md  409_conflict_resolution.json  CRITICAL_BUG_REPORT.md  DEPLOY_CHECKLIST.md  DEPLOY_SETUP.md  EMERGENCY_STOP.flag  EMERGENCY_STOP_ACTIVATED.md  EMERGENCY_STOP_LIFTED.md  EMERGENCY_STOP_USER_REQUESTED.md  FETCH_TESTING_GUIDE.md  FINAL_TRADING_FAILURE_ANALYSIS.md  GROUP_ALERT_ROUTING_SUCCESS.md  IMMEDIATE_STOP.txt  LIVE_PRICE_SOURCES_PATCH_SUCCESS.md  LIVE_PRICE_SOURCES_V2_SUCCESS.md  MULTI_SOURCE_SNAPSHOT_SUCCESS.md  Makefile  PRICE_SOURCES_HARDENING_SUCCESS.md  PRICE_SOURCES_V2_SUCCESS.md  Procfile  READY_FOR_TESTING.md  RELEASE_NOTES.md  REPLIT_DOMAIN_ISSUE.md  STABLE_CHECKPOINT_2025-08-07.md  STATUS.md  SYSTEM_SECURED.md  (+266 more)
.github/: CODEOWNERS  dependabot.yml
alerts/: __init__.py  admin_router.py  telegram.py
attached_assets/: Pasted--0-Enter-project-cd-home-runner-workspace-1-Make-main-py-a-shim-to-the-real-app-s-1755597838618_1755597838619.txt  Pasted--0-Prove-they-aren-t-registered-yet-expect-missing-cd-home-runner-workspace-grep-n-E-autos-1755534121992_1755534121992.txt  Pasted--0-Show-current-basics-python3-PY-import-os-sys-print-py-sys-version-print-BIRDEYE-WS-1754933252629_1754933252630.txt  Pasted--0-Snapshot-router-diagnosis-cd-home-runner-workspace-exit-1-pyth-1755606199957_1755606199958.txt  Pasted--1-Add-this-helper-near-the-other-state-utilities-def-wl-bucket-state-1755860110853_1755860110853.txt  Pasted--1-Extend-autosell-py-with-minimal-rule-storage-helpers-applypatch-PATCH-Begin-Patch--1755531072279_1755531072279.txt  Pasted--1-Health-snapshot-runtime-webhook-pending-echo-HEALTH-date-u-FT-TZ-ps-aux-g-1755528653030_1755528653030.txt  Pasted--1-IMPORTS-near-your-other-imports-import-os-import-json-from-datetime-import-datetime--1755038833194_1755038833195.txt  Pasted--1-Prove-the-environment-inside-the-running-worker-python3-PY-import-os-time-print--1755621113668_1755621113668.txt  Pasted--1-Put-these-helpers-near-your-other-utils-only-once-SOL-MINT-So111111111111111111111111111-1755768138090_1755768138091.txt  Pasted--1-autosell-py-add-Dexscreener-price-with-5s-cache-keep-sim-fallback-applypatch-PATCH-B-1755535395042_1755535395043.txt  Pasted--1-autosell-py-add-simulated-price-eval-rule-state-and-log-buffer-applypatch-PATCH-Beg-1755533701006_1755533701006.txt  Pasted--A-Add-minimal-watch-engine-app-py-applypatch-PATCH-Begin-Patch-Update-File-app-py--1755621822582_1755621822582.txt  (+250 more)
attic/: birdeye_ws_backup.py
chatgpt_analysis/: ANALYSIS_BRIEF.md  automated_pump_trader.py  (+13 more)
(+57 files in other folders)
