[project]
name = "mork-fetch-bot"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = []

[tool.black]
line-length = 100
extend-exclude = "(birdeye_ws_backup\\.py)"

[tool.ruff]
line-length = 100
extend-exclude = ["birdeye_ws_backup.py"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
exclude = "(birdeye_ws_backup\\.py)"
