[project]
name = "mork-fetch-bot"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = []

[tool.black]
line-length = 100
target-version = ["py311"]
extend-exclude = '''
(
  ^birdeye_ws_backup\.py$
| ^final_.*\.py$
| ^simple_.*\.py$
| ^demo_.*\.py$
| ^live_.*\.py$
| ^.*_example\.py$
| ^.*_demo\.py$
| ^standalone_.*\.py$
| ^production_.*\.py$
| ^direct_.*\.py$
| ^working_.*\.py$
| ^scripts/.*$
)
'''

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  "birdeye_ws_backup.py",
  "final_*.py",
  "simple_*.py",
  "demo_*.py",
  "live_*.py",
  "*_example.py",
  "*_demo.py",
  "standalone_*.py",
  "production_*.py",
  "direct_*.py",
  "working_*.py",
  "scripts/*",
]

[tool.ruff.lint]
# Start with correctness-only rules; expand later.
select = ["E", "F"]
# Let Black handle line length.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Quiet known "big" modules until we refactor them.
"app.py" = ["E402", "F401", "F403", "E722"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
exclude = "(birdeye_ws_backup\\.py|final_.*\\.py|simple_.*\\.py|demo_.*\\.py|live_.*\\.py|.*_example\\.py|.*_demo\\.py|standalone_.*\\.py|production_.*\\.py|direct_.*\\.py|working_.*\\.py|scripts/.*)"
