[project]
name = "mork-fetch-bot"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "base58>=2.1.1",
    "cryptography>=45.0.6",
    "flask>=3.1.1",
    "httpx>=0.28.1",
    "openai>=1.99.9",
    "pynacl>=1.5.0",
    "pytest>=8.4.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "solana>=0.36.7",
    "solders>=0.26.0",
    "sqlalchemy>=2.0.42",
    "telegram>=0.0.1",
    "unidiff>=0.7.5",
    "websocket>=0.2.1",
]

[tool.black]
line-length = 100
target-version = ["py311"]
extend-exclude = '''
(
  ^birdeye_ws_backup\.py$
| ^final_.*\.py$
| ^simple_.*\.py$
| ^demo_.*\.py$
| ^live_.*\.py$
| ^.*_example\.py$
| ^.*_demo\.py$
| ^standalone_.*\.py$
| ^production_.*\.py$
| ^direct_.*\.py$
| ^working_.*\.py$
| ^scripts/.*$
)
'''

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
exclude = "(birdeye_ws_backup\\.py|final_.*\\.py|simple_.*\\.py|demo_.*\\.py|live_.*\\.py|.*_example\\.py|.*_demo\\.py|standalone_.*\\.py|production_.*\\.py|direct_.*\\.py|working_.*\\.py|scripts/.*)"

